--- a/src/main/resources/assets/incendium/lang/en_us.json
+++ b/src/main/resources/assets/incendium/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 "item.incendium.multiplex": "Multiplex Shotgun Crossbow",
   "item.incendium.holy_wrath": "Holy Wrath",
-  "item.incendium.fistfull_of_arrows": "Fistfull of Arrows"
+  "item.incendium.fistfull_of_arrows": "Fistfull of Arrows",
+  "item.incendium.firestorm": "Firestorm"
 }
