Sentrys Wrath projectile - we making ZERO progress with this one

--- a/src/main/resources/assets/incendium/lang/en_us.json
+++ b/src/main/resources/assets/incendium/lang/en_us.json
@@ -2,5 +2,6 @@
 "item.incendium.multiplex": "Multiplex Shotgun Crossbow",
   "item.incendium.holy_wrath": "Holy Wrath",
   "item.incendium.fistfull_of_arrows": "Fistfull of Arrows",
-  "item.incendium.firestorm": "Firestorm"
+  "item.incendium.firestorm": "Firestorm",
+  "item.incendium.sentrys_wrath": "Sentry's Wrath"
 }
